<resources>
    <string name="app_name">MNGenesysANChallenge</string>
    <string name="empty" />
    <string name="school_name">School Name</string>
    <string name="username">Username</string>
    <string name="contact_info">Contact Info</string>
    <string name="phone">Phone</string>
    <string name="stats">Stats</string>
    <string name="cell">Cell</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="math">Math</string>
    <string name="full_score">600</string>
    <string name="critical_reading">Critical Reading</string>
    <string name="writing">Writing</string>
    <string name="num_task_taker">Number of task takers</string>
    <string name="sat_scores">SAT Scores</string>
    <string name="close">Close</string>
</resources>